[gd_scene load_steps=3 format=3]

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Game" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Hand" type="Control" parent="Game"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
position = Vector2(0, 400)

[node name="Enemies" type="Node2D" parent="Game"]
position = Vector2(0, 200)

[node name="DeckSizeLabel" type="Label" parent="Game"]
position = Vector2(10, 10)
text = "Deck: 0"

[node name="EnergyLabel" type="Label" parent="Game"]
position = Vector2(10, 30)
text = "Energy: 3"

[node name="EndTurnButton" type="Button" parent="Game"]
position = Vector2(10, 60)
text = "End Turn"

[ext_resource path="res://scripts/DungeonController.gd" type="Script" id=1]
[ext_resource path="res://scripts/GameController.gd" type="Script" id=2]

[connection signal="pressed" from="EndTurnButton" to="Game" method="_on_EndTurnButton_pressed"/]
